Refactor feedback section to 36-point rubric system
- Implement proper 36-point transition plan rubric (8 sections: 6,4,6,4,4,4,4,4)
- Add expandable dropdowns with detailed summaries and edit functionality
- Remove mock data dependencies and implement API-based data flow
- Add comprehensive agent response logging to logs/agent-responses.log
- Update agent command to 'Grade this IEP' with proper PDF file transmission
- Add prominent compliance status header (Compliant/Non-Compliant)
- Remove cluttered overview section for cleaner interface
- Increase API timeout to 3 minutes for complex document processing
- Add comprehensive mock data for all 8 sections with sub-criteria
- Update TypeScript interfaces for new rubric structure
- Fix all compilation and linting errors

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,9 @@ node_modules/
 agentic_test_response_*.json
 kelly_dalton_iep_*.pdf
 test_*.py
+
+# Logs and debugging
+logs/
+*.log
+debug_screenshot_*.png
+iep_test.log
